--- a/WpWeek1/WpWeek1/MainWindow.xaml
+++ b/WpWeek1/WpWeek1/MainWindow.xaml
@@ -6,11 +6,14 @@
         xmlns:local="clr-namespace:WpWeek1"
         mc:Ignorable="d"
         Title="Сейф" Height="350" Width="525">
-    <StackPanel Orientation="Horizontal">
-        <TextBox Width="250">
-
-        </TextBox>
-        <Grid >
+    <Grid>
+        <Grid.ColumnDefinitions >
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition />
+            
+        </Grid.ColumnDefinitions>
+        <TextBox Width="250" Grid.Column="0" Grid.Row="0"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="0">
             <Grid.ColumnDefinitions >
                 <ColumnDefinition />
                 <ColumnDefinition />
@@ -35,5 +38,7 @@
             <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="2">Button 4</Button>
             <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="3">Button 4</Button>
         </Grid>
-    </StackPanel>
+    </Grid>
 </Window>
+
+
