--- a/WpWeek1/WpWeek1/MainWindow.xaml
+++ b/WpWeek1/WpWeek1/MainWindow.xaml
@@ -10,10 +10,10 @@
         <Grid.ColumnDefinitions >
             <ColumnDefinition Width="250"/>
             <ColumnDefinition />
-            
+
         </Grid.ColumnDefinitions>
-        <TextBox Width="250" Grid.Column="0" Grid.Row="0"></TextBox>
-        <Grid Grid.Column="1" Grid.Row="0">
+        <TextBox  Name ="Shyfr"  FontSize="58" Width="250" Grid.Column="0" Grid.Row="0"/>
+        <Grid Grid.Column="1" Grid.Row="0" >
             <Grid.ColumnDefinitions >
                 <ColumnDefinition />
                 <ColumnDefinition />
@@ -25,18 +25,18 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="0" Grid.Row="0">Button 1</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="0" Grid.Row="1">Button 2</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="0" Grid.Row="2">Button 3</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="0" Grid.Row="3">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="1" Grid.Row="0">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="1" Grid.Row="1">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="1" Grid.Row="2">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="1" Grid.Row="3">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="0">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="1">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="2">Button 4</Button>
-            <Button Height="50" Width="50" Margin="3" Grid.Column="2" Grid.Row="3">Button 4</Button>
+            <Button  Margin="5" Grid.Column="0" Grid.Row="0"  Content="7" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="0" Grid.Row="1" Content="4" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="0" Grid.Row="2" Content="1" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="0" Grid.Row="3" Content="C" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click_C"/>
+            <Button  Margin="5" Grid.Column="1" Grid.Row="0" Content="8" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="1" Grid.Row="1" Content="5" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="1" Grid.Row="2" Content="2" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="1" Grid.Row="3" Content="0" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="2" Grid.Row="0" Content="9" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="2" Grid.Row="1" Content="6" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="2" Grid.Row="2" Content="3" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click"/>
+            <Button  Margin="5" Grid.Column="2" Grid.Row="3" Content="OK" FontSize="40" BorderThickness="1,1,2,2" Click="Button_Click_ok"/>
         </Grid>
     </Grid>
 </Window>
