--- a/WpWeek1/WpWeek1/MainWindow.xaml
+++ b/WpWeek1/WpWeek1/MainWindow.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition />
 
         </Grid.ColumnDefinitions>
-        <TextBox  Name ="Shyfr"  FontSize="58" Width="250" Grid.Column="0" Grid.Row="0"/>
+        <TextBox Margin="5" Name ="Shyfr"  FontSize="58" Width="250" Grid.Column="0" Grid.Row="0"/>
         <Grid Grid.Column="1" Grid.Row="0" >
             <Grid.ColumnDefinitions >
                 <ColumnDefinition />
