--- a/WpWeek2/WpWeek2/MainWindow.xaml
+++ b/WpWeek2/WpWeek2/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpWeek2"
         mc:Ignorable="d"
         Title="Анкета студента" Height="600" Width="500">
-    <Grid>
+    <Grid Name="form">
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
             <RowDefinition Height="1*"/>
@@ -19,43 +19,43 @@
         <GroupBox Header="Ввод данных" Grid.Row="0" Padding="3"  HorizontalAlignment="Left" Margin="2"> 
             <WrapPanel Orientation="Vertical">
                 <GroupBox Header="Фамилия" Width="200">
-                    <TextBox></TextBox>
+                    <TextBox Name="FName"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Имя" Width="200">
-                    <TextBox></TextBox>
+                    <TextBox Name="LName"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Отчество" Width="200">
-                    <TextBox></TextBox>
+                    <TextBox Name="Patr"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Семейное положение" Width="150" HorizontalAlignment="Left">
-                    <TextBox></TextBox>
+                    <TextBox Name="MSatus"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Возраст" Width="80" HorizontalAlignment="Left">
-                    <TextBox></TextBox>
+                    <TextBox Name="Age"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Адрес" Width="200" Height="auto">
-                    <TextBox TextWrapping="Wrap"></TextBox>
+                    <TextBox Name="Address" TextWrapping="Wrap"></TextBox>
                 </GroupBox>
                 <GroupBox Header="Email" Width="200">
-                    <TextBox></TextBox>
+                    <TextBox Name="Email"></TextBox>
                 </GroupBox>
             </WrapPanel>
         </GroupBox>
         
         <DockPanel Grid.Row="1">
-            <CheckBox DockPanel.Dock="Top" Margin="15 5 0 0">Высшее образование</CheckBox>
-            <CheckBox DockPanel.Dock="Top" Margin="15 5 0 0">Навыки работы с компьтером</CheckBox>
-            <CheckBox DockPanel.Dock="Top" Margin="15 5 0 0">Знание иностранных языков</CheckBox>
-            <CheckBox DockPanel.Dock="Top" Margin="15 5 0 0">Знание информ. технологий</CheckBox>
+            <CheckBox Name="HiEd" DockPanel.Dock="Top" Margin="15 5 0 0">Высшее образование</CheckBox>
+            <CheckBox Name="PcSkills" DockPanel.Dock="Top" Margin="15 5 0 0">Навыки работы с компьютером</CheckBox>
+            <CheckBox Name="LangSkills" DockPanel.Dock="Top" Margin="15 5 0 0">Знание иностранных языков</CheckBox>
+            <CheckBox Name="Inform" DockPanel.Dock="Top" Margin="15 5 0 0">Знание информ. технологий</CheckBox>
         </DockPanel>
         <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Width="80" Height="30" Margin="5">OK</Button>
+            <Button Width="80" Height="30" Margin="5" Click="Button_Click_OK">OK</Button>
             <Button Width="80" Height="30" Margin="5">CANCEL</Button>
             <Button Width="80" Height="30" Margin="5">IGNORE</Button>
         </StackPanel>
         <ScrollViewer Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="0 0 3 0">
             <GroupBox Header="Список студентов"  Padding="3" Margin="2">
-                <ListBox  Margin="3"></ListBox>
+                <ListBox Name="ListStud" Margin="3"></ListBox>
             </GroupBox>
         </ScrollViewer>
             
