--- a/WpWeek3/WpWeek3/Tuning.xaml
+++ b/WpWeek3/WpWeek3/Tuning.xaml
@@ -39,14 +39,38 @@
             <StackPanel Grid.Row="1" Grid.Column="1">
                 <TextBlock Margin="10 5 10 5">Время начала:</TextBlock>
                 <ComboBox Margin="10 5 10 10" Height="25" IsEditable ="True">
-                    <ComboBoxItem IsSelected="True">
-                       
+                    <ComboBoxItem IsSelected="False" Height="15">
+                        <StackPanel Orientation="Vertical" MinHeight="30">
+                            <TextBlock Margin="2">ЧЧ</TextBlock>
+                            <TextBox Margin="2">00</TextBox>
+                            <TextBlock Margin="2">ММ</TextBlock>
+                            <TextBox Margin="2">00</TextBox>
+                            <TextBlock Margin="2">СС</TextBlock>
+                            <TextBox Margin="2">00</TextBox>
+                        </StackPanel>
                     </ComboBoxItem>
                 </ComboBox>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="2">
                 <TextBlock Margin="10 5 10 5">Дата начала:</TextBlock>
-                <DatePicker Margin="10 5 10 5"  Height="25" SelectedDateFormat="Long"/>
+                <ComboBox Name="Cal_date" Margin="10 5 10 10" Height="25" IsEditable ="True" IsReadOnly="True">
+                    <ComboBoxItem>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="5*"/>
+                            </Grid.ColumnDefinitions>
+                            <Calendar Name="Calendar" Grid.Row="0" Grid.ColumnSpan="2" SelectedDatesChanged="calendar_SelectedDatesChanged" SelectionMode="SingleRange"
+                               IsTodayHighlighted="True"></Calendar>
+                            <Button Grid.Row="1" Grid.Column="0" Height="12" Margin="2" Width="20" Background="White" Click="Button_Click_Date" />
+                            <TextBlock Name="DateText" Grid.Row="1" Grid.Column="1">Сегодня:</TextBlock>
+                        </Grid>
+                    </ComboBoxItem>
+                </ComboBox>
             </StackPanel>
         </Grid>
         <GroupBox Header="Выбор по дням недели" Grid.Row="2" Margin="10 5 10 5">
@@ -77,6 +101,6 @@
             <Button  Grid.Column ="0" Width="80" Height="20" HorizontalAlignment="Right" Margin="0 0 20 0">Ok</Button>
             <Button Grid.Column ="1" Width="80" Height="20" HorizontalAlignment="Left" Margin="20 0 0 0">Отмена</Button>
         </Grid>
-       
+
     </Grid>
 </Window>
