--- a/WpWeek3/WpWeek3/Tuning.xaml
+++ b/WpWeek3/WpWeek3/Tuning.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpWeek3"
-        xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
+        xmlns:local="clr-namespace:WpWeek3"        
+        xmlns:toolkit = "http://schemas.microsoft.com/wpf/2008/toolkit"
         mc:Ignorable="d"
         Title="Tuning" Height="350" Width="500">
     <Grid>
@@ -41,12 +41,7 @@
                 <ComboBox Margin="10 5 10 10" Height="25" IsEditable ="True">
                     <ComboBoxItem IsSelected="False" Height="15">
                         <StackPanel Orientation="Vertical" MinHeight="30">
-                            <TextBlock Margin="2">ЧЧ</TextBlock>
-                            <TextBox Margin="2">00</TextBox>
-                            <TextBlock Margin="2">ММ</TextBlock>
-                            <TextBox Margin="2">00</TextBox>
-                            <TextBlock Margin="2">СС</TextBlock>
-                            <TextBox Margin="2">00</TextBox>
+                            <!--<toolkit:TimePicker></toolkit:TimePicker>-->
                         </StackPanel>
                     </ComboBoxItem>
                 </ComboBox>
