--- a/WpWeek3/WpWeek3/Tuning.xaml
+++ b/WpWeek3/WpWeek3/Tuning.xaml
@@ -48,7 +48,7 @@
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="2">
                 <TextBlock Margin="10 5 10 5">Дата начала:</TextBlock>
-                <ComboBox Name="Cal_date" Margin="10 5 10 10" Height="25" IsEditable ="True" IsReadOnly="True">
+                <ComboBox Name="Cal_date" Margin="10 5 10 10" Height="25" IsEditable ="True" IsReadOnly="False">
                     <ComboBoxItem>
                         <Grid>
                             <Grid.RowDefinitions>
