--- a/WpWeek3/WpWeek3/MainWindow.xaml
+++ b/WpWeek3/WpWeek3/MainWindow.xaml
@@ -27,6 +27,6 @@
         <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" >Список заданий</TextBlock>
         <ListBox Grid.Row="2" Margin="5"></ListBox>
         <TextBlock Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">Отчет о выполнении задания</TextBlock>
-        <ListBox Grid.Row="4" Margin="5"></ListBox>
+        <ListBox Name="Report" Grid.Row="4" Margin="5"></ListBox>
     </Grid>
 </Window>
