--- a/WpWeek3/WpWeek3/MainWindow.xaml
+++ b/WpWeek3/WpWeek3/MainWindow.xaml
@@ -6,6 +6,13 @@
         xmlns:local="clr-namespace:WpWeek3"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <ContextMenu x:Key="TrayMenu">
+            <MenuItem Header="Hide" Click="ShowHideMainWindow" />
+            <Separator />
+            <MenuItem Header="Exit" Click="MenuExitClick" />
+        </ContextMenu>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -25,7 +32,7 @@
             </MenuItem>
         </Menu>
         <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" >Список заданий</TextBlock>
-        <ListBox Grid.Row="2" Margin="5"></ListBox>
+        <ListBox Name="ListTask" Grid.Row="2" Margin="5"></ListBox>
         <TextBlock Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">Отчет о выполнении задания</TextBlock>
         <ListBox Name="Report" Grid.Row="4" Margin="5"></ListBox>
     </Grid>
